API finalizada
